# secrum-client

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/app/: Application.cpp  Application.h  AuthController.cpp  AuthController.h  ChatController.h
src/core/auth/: AuthService.cpp  AuthService.h  AuthSession.cpp  AuthSession.h  TokenRefresher.cpp  TokenRefresher.h
src/core/chat/: ChatService.cpp  ChatService.h
src/core/config/: ClientConfiguration.cpp  ClientConfiguration.h
src/core/crypto/: CryptoService.cpp  CryptoService.h
src/core/device/: DeviceService.cpp  DeviceService.h
src/core/messaging/: MessageMapper.cpp  MessageMapper.h  MessageService.cpp  MessageService.h
src/core/model/: Chat.h  Device.h  Message.h  User.h  UserSearchResult.h
src/core/network/: ConnectivityService.cpp  ConnectivityService.h  HttpClient.cpp  HttpClient.h  WSClient.cpp  WSClient.h
src/core/presence/: PresenceService.cpp  PresenceService.h
src/core/storage/: IStorage.h  SQLiteStorage.cpp  SQLiteStorage.h
src/core/sync/: SyncService.h
src/core/users/: UserSearchService.cpp  UserSearchService.h
src/core/utils/: JWT.cpp  JWT.h
src/ui/: DeviceManagerDialog.cpp  DeviceManagerDialog.h  DeviceManagerDialog.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
